# veracruz

./: Makefile
execution-engine/src/: lib.rs
linux-root-enclave/: Cargo.toml  Makefile
linux-root-enclave-server/: Cargo.toml
linux-root-enclave-server/src/: main.rs
linux-root-enclave/src/: main.rs
proxy-attestation-server/: Cargo.toml
proxy-attestation-server/src/: attestation.rs
psa-attestation/: Cargo.toml
runtime-manager/: Cargo.toml  Makefile
runtime-manager/src/: runtime_manager.rs  runtime_manager_linux.rs
runtime-manager/src/managers/: error.rs  execution_engine_manager.rs  mod.rs
test-collateral/: Makefile
veracruz-server/: Cargo.toml  Makefile
veracruz-server-test/: Cargo.toml
veracruz-server-test/src/: main.rs
veracruz-server/src/: server.rs  veracruz_server.rs  veracruz_server_linux.rs  veracruz_server_nitro.rs
veracruz-test/src/: main.rs
veracruz-utils/src/: linux.rs
veracruz-utils/src/platform/: linux.rs  vm.rs
veracruz-utils/src/platform/nitro/: nitro.rs
