[package]
name = "linux-root-enclave-server"
version = "0.1.0"
authors = ["The Veracruz Development Team"]
edition = "2018"
description = "Server for the Linux root enclave (read: application)."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = "3.0.0-beta.2"
env_logger = "0.8.3"
err-derive = "0.3.0"
log = "0.4.14"
serde = {version = "1.0.125", features = ["derive"]}
url = "2.2.1"
veracruz-utils = {path = "../veracruz-utils", features = ["linux"]}