[package]
name = "linux-root-enclave"
version = "0.1.0"
authors = ["The Veracruz Development Team"]
edition = "2018"
description = "The root enclave (read: application) for Veracruz when used as a Linux process."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
env_logger = "0.8.3"
err-derive = "0.3.0"
hex = "0.4.2"
lazy_static = "1.4.0"
log = "0.4.14"
nix = "0.20.0"
psa-attestation = {path = "../psa-attestation", features = ["linux"]}
ring = "0.17.0-alpha.8"
serde = {version = "1.0.125", features = ["derive"]}
veracruz-utils = {path = "../veracruz-utils/", features = ["linux"]}

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
